--- a/package.json
+++ b/package.json
@@ -4,16 +4,25 @@
         "dev": "node server.js",
         "build": "next build",
         "flow": "flow",
-        "start": "NODE_ENV=production node server.js",
+        "start": "NODE_ENV=production node server.js"
     },
     "dependencies": {
         "@zeit/next-sass": "^0.2.0",
+        "apollo-boost": "^0.1.15",
+        "aws-amplify": "^1.0.8",
+        "aws-amplify-react": "^2.0.0",
+        "aws-appsync": "1.3.3",
+        "aws-appsync-react": "^1.1.4",
         "formik": "^1.0.3",
+        "graphql": "^14.0.0",
+        "graphql-tag": "^2.9.2",
+        "isomorphic-unfetch": "^2.1.1",
         "mobx": "^5.0.3",
         "mobx-react": "^5.2.3",
         "next": "^6.1.1",
         "node-sass": "^4.9.2",
         "react": "^16.4.2",
+        "react-apollo": "^2.1.11",
         "react-dom": "^16.4.2",
         "styled-components": "^3.4.2",
         "yup": "^0.26.2"
